style improvements incl. prevent rubber banding on mobile.

--- a/wfbc.page/Client/styles/_drawer.scss
+++ b/wfbc.page/Client/styles/_drawer.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     background-color: $wfbc-blue-2;
     overflow: hidden;
-    z-index: 25;
+    z-index: 2;
     flex: none;
 }
 
@@ -60,6 +60,7 @@
     width: 100%;
     transition: width .4s ease-in-out;
 }
+
 
 .side-menu {
     position: absolute;
